Added mythos EB4

--- a/src/InteractiveCards/InteractiveCards.css
+++ b/src/InteractiveCards/InteractiveCards.css
@@ -450,6 +450,31 @@
     transform: scale(1.2);
 }
 
+.tokenMythosTickTockMen {
+    width: 2.2vw;
+    height: 2.2vw;
+    background-image: url(/src/pictures/Tokens/TokenTickTockMenSlayed.png);
+    background-color: transparent;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 0.2vw;
+    margin-left: 0.25vw;
+    margin-right: 0.25vw;
+    margin-bottom: 0.5vw;
+    border: none;
+    text-align: center;
+    font-family: EldritchNumbers;
+    padding-top: 0.1vw;
+    font-size: 1.5vw;
+    transition: all .3s ease; 
+    cursor: pointer;
+}
+
+.tokenMythosTickTockMen:hover {
+    transform: scale(1.2);
+}
+
 .tokenMythosEldritchFaded {
     width: 1.7vw;
     height: 1.7vw;
@@ -471,7 +496,7 @@
     margin-top: 4.1vw;
 }
 
-#tokenMythosEldritchFadedFocus {
+#tokenMythosEldritchFadedFocusEB1 {
     width: 6.5vw;
     height: 6.5vw;
     margin-left: 1vw;
@@ -481,19 +506,32 @@
 }
 
 #tokenMythosEldritchFadedEB2 {
-    margin-right: 5.5vw;
-    margin-top: 2.5vw;
+    margin-left: 5.2vw;
+    margin-top: 2.4vw;
 }
 
 #tokenMythosEldritchFadedFocusEB2 {
     width: 6.5vw;
     height: 6.5vw;
-    margin-left: 0.5vw;
-    margin-top: 10.5vw;
+    margin-left: 21.3vw;
+    margin-top: 9.8vw;
     padding-top: 1vw;
     font-size: 5vw;
 }
 
+#tokenMythosEldritchFadedEB4 {
+    margin-right: 5vw;
+    margin-top: 4.1vw;
+}
+
+#tokenMythosEldritchFadedFocusEB4 {
+    width: 6.5vw;
+    height: 6.5vw;
+    margin-left: 1vw;
+    margin-top: 16vw;
+    padding-top: 1vw;
+    font-size: 5vw;
+}
 
 .outerPopupMythos {
     position: fixed;
@@ -544,6 +582,14 @@
     height: 7vw;
     margin-top: 2vw;
     justify-content: center;
+}
+
+#mythosPopUpTextDivEB2 {
+    height: 3vw;
+}
+
+#mythosPopUpTextDivEB4 {
+    height: 3vw;
 }
 
 .mythosPopUpText {
@@ -690,6 +736,17 @@
     height: 3.3vw;
 }
 
+.tokenMythosPopUpClueCrossedOut {
+    background-image: url(/src/pictures/Tokens/TokenClueCrossedOut.png);
+    background-size: cover;
+    background-color: transparent;
+    margin: 0.5vw;
+    margin-bottom: 0;
+    border: none;
+    width: 3.4vw;
+    height: 3.4vw;
+}
+
 .tokenMythosPopUpNumbersFont{
     font-family: EldritchNumbers;
     font-size: 3.4vw;
@@ -761,4 +818,12 @@
 
 #MythosEB2 {
     background-image: url(/src/pictures/Mythos/Mythos_EB2.png);
+}
+
+#MythosEB3 {
+    background-image: url(/src/pictures/Mythos/Mythos_EB3.png);
+}
+
+#MythosEB4 {
+    background-image: url(/src/pictures/Mythos/Mythos_EB4.png);
 }
