--- a/src/InteractiveCards/InteractiveCards.css
+++ b/src/InteractiveCards/InteractiveCards.css
@@ -450,10 +450,9 @@
     transform: scale(1.2);
 }
 
-.tokenMythosTickTockMen {
+.tokenMythosMonsterSlayed {
     width: 2.2vw;
     height: 2.2vw;
-    background-image: url(/src/pictures/Tokens/TokenTickTockMenSlayed.png);
     background-color: transparent;
     background-size: contain;
     background-repeat: no-repeat;
@@ -471,8 +470,16 @@
     cursor: pointer;
 }
 
-.tokenMythosTickTockMen:hover {
+.tokenMythosMonsterSlayed:hover {
     transform: scale(1.2);
+}
+
+#tokenMythosTickTockMenSlayed {
+    background-image: url(/src/pictures/Tokens/TokenTickTockMenSlayed.png);
+}
+
+#tokenMythosWindWalkerSlayed {
+    background-image: url(/src/pictures/Tokens/TokenWindWalkerSlayed.png);
 }
 
 .tokenMythosEldritchFaded {
@@ -529,6 +536,20 @@
     height: 6.5vw;
     margin-left: 1vw;
     margin-top: 16vw;
+    padding-top: 1vw;
+    font-size: 5vw;
+}
+
+#tokenMythosEldritchFadedNB3 {
+    margin-right: 5.3vw;
+    margin-top: 8.5vw;
+}
+
+#tokenMythosEldritchFadedFocusNB3 {
+    width: 6.5vw;
+    height: 6.5vw;
+    margin-left: 0.5vw;
+    margin-top: 33.5svw;
     padding-top: 1vw;
     font-size: 5vw;
 }
@@ -769,6 +790,26 @@
     border: none;
     width: 3.4vw;
     height: 3vw;
+}
+
+.tokenMythosPopUpHealth {
+    background-image: url(/src/pictures/Tokens/TokenHealth.png);
+    background-size: cover;
+    background-color: transparent;
+    margin: 0.5vw;
+    border: none;
+    width: 3.4vw;
+    height: 3.2vw;
+}
+
+.tokenMythosPopUpDelayedInvestigator {
+    background-image: url(/src/pictures/Tokens/TokenDelayedInvestigator.PNG);
+    background-size: cover;
+    background-color: transparent;
+    border: none;
+    margin-left: -1.8vw;
+    width: 6vw;
+    height: 3.5vw;
 }
 
 .tokenMythosPopUpDoom {
