--- a/src/InteractiveCards/InteractiveCards.css
+++ b/src/InteractiveCards/InteractiveCards.css
@@ -803,7 +803,7 @@
 }
 
 .tokenMythosPopUpDelayedInvestigator {
-    background-image: url(/src/pictures/Tokens/TokenDelayedInvestigator.PNG);
+    background-image: url(/src/pictures/Tokens/TokenDelayedInvestigator.png);
     background-size: cover;
     background-color: transparent;
     border: none;
