--- a/src/InteractiveCards/InteractiveCards.css
+++ b/src/InteractiveCards/InteractiveCards.css
@@ -963,6 +963,26 @@
     transform: scale(1.05);
 }
 
+#MythosEG1 {
+    background-image: url(/src/pictures/Mythos/Mythos_EG1.png);
+}
+
+#MythosEG2 {
+    background-image: url(/src/pictures/Mythos/Mythos_EG2.png);
+}
+
+#MythosEG3 {
+    background-image: url(/src/pictures/Mythos/Mythos_EG3.png);
+}
+
+#MythosEG4 {
+    background-image: url(/src/pictures/Mythos/Mythos_EG4.png);
+}
+
+#MythosEG5 {
+    background-image: url(/src/pictures/Mythos/Mythos_EG5.png);
+}
+
 #MythosNG1 {
     background-image: url(/src/pictures/Mythos/Mythos_NG1.png);
 }
@@ -997,6 +1017,106 @@
 
 #MythosHG1 {
     background-image: url(/src/pictures/Mythos/Mythos_HG1.png);
+}
+
+#MythosHG2 {
+    background-image: url(/src/pictures/Mythos/Mythos_HG2.png);
+}
+
+#MythosHG3 {
+    background-image: url(/src/pictures/Mythos/Mythos_HG3.png);
+}
+
+#MythosHG4 {
+    background-image: url(/src/pictures/Mythos/Mythos_HG4.png);
+}
+
+#MythosHG5 {
+    background-image: url(/src/pictures/Mythos/Mythos_HG5.png);
+}
+
+#MythosEY1 {
+    background-image: url(/src/pictures/Mythos/Mythos_EY1.png);
+}
+
+#MythosEY2 {
+    background-image: url(/src/pictures/Mythos/Mythos_EY2.png);
+}
+
+#MythosEY3 {
+    background-image: url(/src/pictures/Mythos/Mythos_EY3.png);
+}
+
+#MythosEY4 {
+    background-image: url(/src/pictures/Mythos/Mythos_EY4.png);
+}
+
+#MythosEY5 {
+    background-image: url(/src/pictures/Mythos/Mythos_EY5.png);
+}
+
+#MythosNY1 {
+    background-image: url(/src/pictures/Mythos/Mythos_NY1.png);
+}
+
+#MythosNY2 {
+    background-image: url(/src/pictures/Mythos/Mythos_NY2.png);
+}
+
+#MythosNY3 {
+    background-image: url(/src/pictures/Mythos/Mythos_NY3.png);
+}
+
+#MythosNY4 {
+    background-image: url(/src/pictures/Mythos/Mythos_NY4.png);
+}
+
+#MythosNY5 {
+    background-image: url(/src/pictures/Mythos/Mythos_NY5.png);
+}
+
+#MythosNY6 {
+    background-image: url(/src/pictures/Mythos/Mythos_NY6.png);
+}
+
+#MythosNY7 {
+    background-image: url(/src/pictures/Mythos/Mythos_NY7.png);
+}
+
+#MythosNY8 {
+    background-image: url(/src/pictures/Mythos/Mythos_NY8.png);
+}
+
+#MythosNY9 {
+    background-image: url(/src/pictures/Mythos/Mythos_NY9.png);
+}
+
+#MythosNY10 {
+    background-image: url(/src/pictures/Mythos/Mythos_NY10.png);
+}
+
+#MythosNY11 {
+    background-image: url(/src/pictures/Mythos/Mythos_NY11.png);
+}
+
+#MythosHY1 {
+    background-image: url(/src/pictures/Mythos/Mythos_HY1.png);
+}
+
+#MythosHY2 {
+    background-image: url(/src/pictures/Mythos/Mythos_HY2.png);
+}
+
+#MythosHY3 {
+    background-image: url(/src/pictures/Mythos/Mythos_HY3.png);
+}
+
+#MythosHY4 {
+    background-image: url(/src/pictures/Mythos/Mythos_HY4.png);
+}
+
+#MythosHY5 {
+    background-image: url(/src/pictures/Mythos/Mythos_HY5.png);
 }
 
 #MythosEB1 {
