--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -473,6 +473,23 @@
     z-index: 50;
 }
 
+.mythosDefeat {
+    background-image: url(/src/pictures/Mythos/Mythos_Defeat_Card.png);
+    height: 11.5vw;
+    width: 7.4vw;
+    margin: 0.1vw 1.05vw 0.2vw 1.05vw;
+    justify-content: center;
+    background-size: cover;
+    border-radius: 0.4vw;
+    transition: all .3s ease;
+    cursor: pointer;
+}
+
+.mythosDefeat:hover {
+    transform: scale(1.1);
+    z-index: 50;
+}
+
 .mythosFrontPopup {
     display: flex;
     height: 41vw;
