--- a/src/pages/AllPages.css
+++ b/src/pages/AllPages.css
@@ -103,8 +103,7 @@
     background-size: cover;
 }
 
-.cthulhuLvlChar {
-    background-image: url(/src/pictures/Main/Ancient_Cthulhu.jpg);
+.ancientLvlChar {
     background-size: cover;
     height: 100vh;
     width: 100vw;
@@ -113,6 +112,22 @@
     animation: fadeInAnimation ease 7s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
+}
+
+#AzathothLvlChar {
+    background-image: url(/src/pictures/Main/Ancient_Azathoth.jpg);
+}
+
+#YogSothothLvlChar {
+    background-image: url(/src/pictures/Main/Ancient_Yog-Sothoth.jpg);
+}
+
+#YogSothothLvlChar {
+    background-image: url(/src/pictures/Main/Ancient_Shub-Niggurath.jpg);
+}
+
+#CthulhuLvlChar {
+    background-image: url(/src/pictures/Main/Ancient_Cthulhu.jpg);
 }
 
 .cthulhu {
